force-app/Base/main/default/objects/TripReport__c/fields/Date__c.field-meta.xml
<CustomField>
	<fullName>Date__c</fullName>
	<label>Date</label>
	<type>Date</type>
</CustomField>