force-app/Base/main/default/objects/TripReport__c/fields/Rating__c.field-meta.xml
<CustomField>
	<fullName>Rating__c</fullName>
	<label>Rating</label>
	<precision>1</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>