force-app/Base/main/default/objects/TripReport__c/fields/ReviewType__c.field-meta.xml
<CustomField>
	<fullName>ReviewType__c</fullName>
	<label>ReviewType</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>Hotel</fullName>
			</value>
			<value>
				<fullName>Restaurant</fullName>
			</value>
			<value>
				<fullName>Training Center</fullName>
			</value>
			<value>
				<fullName>Students</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>